--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
 <input class="in" id="in" placeholder="Ples give me lenk">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 </form>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <input class="sb" id="sb" value="Submit" type="submit" />
 <h3>ez yt downloader website made by sean :)</h3>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
